# hetzner-vps-setup

./: .env.example  .op.env  AGENTS.md  Brewfile  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  cloud-config.yaml.tmpl  doctor.py  pyproject.toml  setup-vps.py
hetzner-setup/: README.md  cloud-config.yaml.tmpl  setup-vps.py
